--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -63,10 +63,10 @@ content = "<span class='text-center block'>♥️ Loving Hugoplate? <a class='un
 # seo module: https://github.com/gethugothemes/hugo-modules/tree/master/seo-tools/basic-seo
 [metadata]
 keywords = ["Boilerplate", "Hugo"]
-description = "Hugo & Tailwindcss Starter"
-author = "zeon.studio"
-twitter = "zeon_studio"
-image = "images/og-image.png"
+description = "Financial Data Analysis"
+author = "FIND-A"
+twitter = "FIND-A"
+image = "images/screenshot.png"
 
 
 # site verifications
