--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,7 @@
 ######################## default configuration ####################
 # The base URL of your site (required). This will be prepended to all relative URLs.
-baseURL = "/"
+baseURL = "https://find-alpha.github.io/"
+enableRobotsTXT = true
 # Title of your website (required).
 title = "FIND-A"
 # Your theme name
