--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
 # The base URL of your site (required). This will be prepended to all relative URLs.
-baseURL = "https://find-alpha.github.io/"
+baseURL = "https://github.com/find-alpha/find-alpha.github.io/"
 enableRobotsTXT = true
 # Title of your website (required).
 title = "FIND-A"
