feat(app): Update site_verification code

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -75,7 +75,7 @@ image = "images/og-image.png"
 # site verifications
 # verification module: https://github.com/gethugothemes/hugo-modules/tree/master/seo-tools/site-verifications
 [site_verification]
-google = ""   # Your verification code
+google = "PMs6C4VwgdVPQ0TINvEh-qdwML5zxSEup9kHy-tJeUU"   # Your verification code
 bing = ""     # Your verification code
 baidu = ""    # Your verification code
 facebook = "" # Your verification code
