--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -66,7 +66,7 @@ content = "<span class='text-center block'>♥️ Loving Hugoplate? <a class='un
 # seo module: https://github.com/gethugothemes/hugo-modules/tree/master/seo-tools/basic-seo
 [metadata]
 keywords = ["FIND-A", "Financial Data Analysis"]
-description = "FIND-A(파인드 알파)는 2020년 설립되어 약 40명의 학부, 석사, 박사과정생과 현직자가 활동 중인 금융데이터분석학회입니다. FIND-A는 Financial Data Analysis의 약자로, 금융 산업 전반의 디지털 전환에 발 맞추어 디지털 금융 역량을 지닌 인재를 양상하는 것으로 목표로 하고 있습니다."
+description = "금융 산업 전반의 디지털 전환에 발 맞추어 디지털 금융 역량을 지닌 인재를 양성하는 학회 FIND-A(파인드 알파)입니다."
 author = "FIND-A"
 image = "images/image.png"
 
