--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -74,8 +74,8 @@ image = "images/image.png"
 # site verifications
 # verification module: https://github.com/gethugothemes/hugo-modules/tree/master/seo-tools/site-verifications
 [site_verification]
-google = "PMs6C4VwgdVPQ0TINvEh-qdwML5zxSEup9kHy-tJeUU"   # Your verification code
-naver = "2e8da4dd6a46a541876d6854fd261c29464ec719"
+# google = "PMs6C4VwgdVPQ0TINvEh-qdwML5zxSEup9kHy-tJeUU"   # Your verification code
+# naver = "2e8da4dd6a46a541876d6854fd261c29464ec719"
 
 # cookies
 # cookies module: https://github.com/gethugothemes/hugo-modules/tree/master/components/cookie-consent
