feat(app): Update metadata

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -67,7 +67,7 @@ content = "<span class='text-center block'>♥️ Loving Hugoplate? <a class='un
 [metadata]
 keywords = ["FIND-A", "Financial Data Analysis"]
 description = "금융 산업 전반의 디지털 전환에 발 맞추어 디지털 금융 역량을 지닌 인재를 양성하는 학회 FIND-A(파인드 알파)입니다."
-author = "FIND-A"
+author = "FIND-A | 파인드알파"
 image = "images/image.png"
 
 
